--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<button onclick="rollTheDice()">Roll The Dice</button>
 	<h3 id="current-dice-number"></h3>
 	<button onclick="createPlayer()">Add Player</button>
+	<ul id="player-list"></ul>
 </div>
 
 </body>
@@ -31,5 +32,6 @@
 <script src="draw.js"></script>
 <script src="board.js"></script>
 <script src="ladder.js"></script>
+<script src="snake.js"></script>
 <script src="app.js"></script>
 </html>
